src/App.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* FONTS */

@font-face {
  font-family: "Hind";
 
  src: local("Hind-Regular"),
    url("./fonts/Hind-Regular.ttf") format("truetype");
}
@font-face {
  font-family: "Montserrat";

  src: local("Montserrat"),
    url("./fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
}

/* BASE STYLES */
/* slateblue */
/*orange/red #ff6c62 */
/*light grey #aea9ba */
/*darkgrey #494454 */
html{
  font-size: 62.5%;
}

body {
  background-color: slateblue;
  font-size: 2rem;
}

/* HEADER */

header {
  text-align: center;
}

h1{
  font-size: 6rem;
  color: white;
  font-family: Montserrat, sans-serif;
  text-shadow: 5px 10px 15px black;
}

/* GALLERY */

h2{
  margin: 5px 1px 5px 1px;
  font-family: Hind, sans-serif;
  font-weight: 600;
  font-size: 1.8rem;
  color: #ff6c62;
  text-transform: uppercase;
}

.link {
  text-decoration: none;
  font-family: Hind, sans-serif;
  font-size: 1.5rem;
  font-weight: 600;
  border: 2px solid #ff6c62;
  padding: 2.5px 5px;
  color: #ff6c62;
  letter-spacing: -0.5px; 
  text-transform: uppercase;
  position: absolute;
  bottom: 0;
  margin-bottom: 5px;
  text-align: center;
  width: 95%;
}

h3{
  font-size: 1.5rem;
  margin-bottom: 50px;
  color: #494454;
  text-transform: capitalize;
}

.link:hover,
.link:focus{
  background-color: #ff6c62;
  color: white;
}



ul{
  background-color: white;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}


li{
  width: calc((100%/3) - 220px);
  margin: 30px;
  padding: 25px 2%;
  min-width: 220px;
  max-width: 310px;
}

.itemContainer{
  position: relative;
  list-style: none;
  margin: 20px;
  padding: 0;
  box-shadow: 5px 10px 15px grey;
  border: 1px solid #aea9ba;
}

.itemContainer:hover{
  box-shadow:5px 10px 15px slateblue ;

}


img {
  max-width: 100%;
  opacity: 0.85;
}

.itemContainer:hover .image{
  opacity: 1;
  
}

.textContainer {
  margin: 5px 5px 10px 5px;
}

/* FORM */

.search{
  display: flex;
  margin: 50px 0;
  flex-direction: column;
}
.searchBar{
  text-align: center;
}
input{
  border: 1px solid black;
  border-right: none;
  padding: 5px;
  border-radius: 5px 0 0 5px;
  outline: none;
  width: 50%;
}

input:focus,
input:hover{
  color: slateblue;
}


input::placeholder{
  color: rgb(99, 156, 212);
}
label{
  text-align: center;
  padding: 5px;
  color: white;
}

.searchBtn{
  width: 40px;
  height: 35px;
  border: 1px solid black;
  border-radius: 0 5px 5px 0;
  cursor: pointer;
}
span{
  color: rgb(54, 45, 109);
  font-weight: 700;
  display: block;
  margin-bottom: 20px;
  font-family: Montserrat, sans-serif;
}
i{
  font-size: 1.5rem;
  color: rgb(54, 45, 109);
}

/* FOOTER */
p {
  font-size: 2rem;
  font-family: Hind, sans-serif;
  text-align: center;
 

}

footer{
  color: white;
  margin-top: 10%;
}



.wpcf7 input[type=submit] {

  -webkit-border-radius: 0 !important;
  -webkit-appearance: none !important;

}

